# HaskellTracer

./: README.md
src/: .editorconfig  .gitignore  HaskellTracer.cabal  src.code-workspace
src/app/: Color3.hs  Lights.hs  Main.hs  Ray.hs  Shape.hs  Vector3.hs
